# sdl3-text

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  readme.md
cmake/: Dependencies.cmake  LinuxPresets.cmake  Win32Presets.cmake  compile-hlsl.cmake  import-std.cmake  x64-linux-libcxx.cmake
src/: CMakeLists.txt  application.cppm  clock.cppm  io.cppm  main.cpp  pch.hpp  pch_std.hpp  sdl.cppm
src/shaders/: basic.ps.hlsl  basic.vs.hlsl
